[metadata]
name = pc_skeletor
version = 1.0.0
description = Point Cloud Skeletonizer
long_description = file: Readme.md
long_description_content_type = text/markdown
license = MIT
author = Lukas Meyer
author_email = lukas.meyer@fau.de
url = https://github.com/meyerls/PC-Skeletor

[options]
packages = find:
install_requires =
    mistree @ git+https://github.com/meyerls/mistree.git
    numpy
    scipy
    matplotlib
    open3d==0.16
    robust_laplacian==0.2.4
    dgl
    torch
    tqdm
    imageio
    wget
    networkx
python_requires = >=3.7

[options.packages.find]
exclude =
    tests
    docs
    examples

[options.extras_require]
dev =
    pytest

[options.classifiers]
Programming Language : : Python :: 3.7
Programming Language : : Python :: 3.8
Programming Language : : Python :: 3.9
Programming Language : : Python :: 3.10
License : : OSI Approved :: MIT License
Operating System : : OS Independent
Topic : : Scientific/Engineering
Topic : : Scientific/Engineering :: Computer Vision
Topic : : Scientific/Engineering :: Agriculture